# Projects

./: .gitignore  README.md
C_CPP_Projects/double_linked_list/: CMakeLists.txt  doubly_linked_list.h  main.c
C_CPP_Projects/matlab-8/: CMakeLists.txt
C_CPP_Projects/moon_lander_sim/: CMakeLists.txt  main.c
C_CPP_Projects/network/: .gitignore.txt  CMakeLists.txt  main.cpp
C_CPP_Projects/network/include/: factory.hpp  helpers.hpp  nodes.hpp  package.hpp  storage_types.hpp  types.hpp
C_CPP_Projects/network/netsim_tests/mocks/: nodes_mocks.hpp
C_CPP_Projects/network/src/: factory.cpp  helpers.cpp  nodes.cpp  package.cpp  storage_types.cpp
C_CPP_Projects/rejestr_pracownikow/: CMakeLists.txt  firma.h  main.cpp  operacje.h  pracownik.h  szablon.hpp  temat1.txt  temat2.txt
C_CPP_Projects/shapes-2/: CMakeLists.txt
C_CPP_Projects/simple_quicksort/: CMakeLists.txt  main.cpp
C_CPP_Projects/vehicles-3/: CMakeLists.txt
Python_Projects/: amazon_price_bot.py  gra_w_zycie_komorek.py  password_manager.py  recipes_scrapping.py  stock_news.py
Python_Projects/ASD_ASL_tree/: ASL_tree.py  main.py
Python_Projects/ASD_prime_algorithm/: img_segmentation.py  prim.py
Python_Projects/Ullman_algorithm/: graphs.py  main.py
Python_Projects/flashcards_eng_pl/: main.py
Python_Projects/flight_deal_finder/: flight_search.py
Python_Projects/flight_deal_finder_bot/: data_manager.py  main.py  notification_manager.py
Python_Projects/ford_fulkerson_method/: graphs.py  main.py
Python_Projects/hangman_gui/: baza_graczy.py  (+7 more)
WynikiMaturalne_GUI_DB/: project_visualisation.py
(+20 files in other folders)
